Add new Tutorial-Psi4_tetrads module

--- a/Tutorial-Psi4.ipynb
+++ b/Tutorial-Psi4.ipynb
@@ -6,8 +6,7 @@
    "source": [
     "# $\\psi_4$\n",
     "\n",
-    "### Authors: Zach Etienne & Patrick Nelson\n",
-    "\n"
+    "### Author: Zach Etienne"
    ]
   },
   {
@@ -424,181 +423,6 @@
     "                                          -tetrad_product__Imag_psi4(n4U,mre4U,mim4U, j+1,0,0,l+1) \\\n",
     "                                          -tetrad_product__Imag_psi4(n4U,mre4U,mim4U, 0,j+1,l+1,0) \\\n",
     "                                          +tetrad_product__Imag_psi4(n4U,mre4U,mim4U, j+1,0,l+1,0)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Step 7: The quasi-Kinnersley tetrad\n",
-    "\n",
-    "To define the Weyl scalars, first a tetrad must be chosen. Below, for compatibility with the [WeylScal4 diagnostic module](https://bitbucket.org/einsteintoolkit/einsteinanalysis/src/master/WeylScal4/), we implement the quasi-Kinnersley tetrad of [Baker, Campanelli, Lousto (2001)](https://arxiv.org/pdf/gr-qc/0104063.pdf).\n",
-    "\n",
-    "We begin with the vectors given in eqs. 5.6 and 5.7 of the BCL paper,\n",
-    "\\begin{align}\n",
-    "    v_1^a &= [-y,x,0] \\\\\n",
-    "    v_2^a &= [x,y,z] \\\\\n",
-    "    v_3^a &= {\\rm det}(g)^{1/2} g^{ad} \\epsilon_{dbc} v_1^b v_2^c,\n",
-    "\\end{align}\n",
-    "and carry out the Gram-Schmidt orthonormalization process. Note that these vectors are initially orthogonal to each other in flat spacetime; one is in the $\\phi$ direction, one is in $r$, and the third is the cross product of the first two. The vectors $w_i^a$ are placeholders in the code; the final product of the orthonormalization is the vectors $e_i^a$. So,\n",
-    "\\begin{align}\n",
-    "e_1^a &= \\frac{v_1^a}{\\omega_{11}} \\\\\n",
-    "e_2^a &= \\frac{v_2^a - \\omega_{12} e_1^a}{\\omega_{22}} \\\\\n",
-    "e_3^a &= \\frac{v_3^a - \\omega_{13} e_1^a - \\omega_{23} e_2^a}{\\omega_{33}}, \\\\\n",
-    "\\end{align}\n",
-    "where $\\omega_{ij} = v_i^a v_j^b \\bar{\\gamma}_{ab}$ needs to be updated between steps (to save resources, we can get away with only calculating components as needed), and uses $e_i^a$ instead of $v_i^a$ if it has been calculated.\n",
-    "\n",
-    "Once we have orthogonal, normalized vectors, we can contruct the tetrad itself, again drawing on eqs. 5.6. We can draw on SymPy's built-in tools for complex numbers to build the complex vectors $m^a$ and $(m^*)^a$:\n",
-    "\\begin{align}\n",
-    "    l^a &= \\frac{1}{\\sqrt{2}} e_2^a \\\\\n",
-    "    n^a &= \\frac{-1}{\\sqrt{2}} e_2^a \\\\\n",
-    "    m^a &= \\frac{1}{\\sqrt{2}} (e_3^a + i e_1^a) \\\\\n",
-    "    (m^*)^a &= \\frac{1}{\\sqrt{2}} (e_3^a - i e_1^a)\n",
-    "\\end{align}\n",
-    "\n",
-    "We will also assume that $n^0 = \\frac{1}{\\sqrt{2}}$ and that $m^0 = (m^*)^0 = 0$. This last assumption in particular will significantly reduce the terms needed to find $\\psi_4$."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 7.a: Define the rank-3 version of the Levi-Civita symbol. Amongst\n",
-    "#         other uses, this is needed for the construction of the approximate \n",
-    "#         quasi-Kinnersley tetrad.\n",
-    "def define_LeviCivitaSymbol_rank3(DIM=-1):\n",
-    "    if DIM == -1:\n",
-    "        DIM = par.parval_from_str(\"DIM\")\n",
-    "\n",
-    "    LeviCivitaSymbol = ixp.zerorank3()\n",
-    "\n",
-    "    for i in range(DIM):\n",
-    "        for j in range(DIM):\n",
-    "            for k in range(DIM):\n",
-    "                # From https://codegolf.stackexchange.com/questions/160359/levi-civita-symbol :\n",
-    "                LeviCivitaSymbol[i][j][k] = (i - j) * (j - k) * (k - i) / 2\n",
-    "    return LeviCivitaSymbol"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 7.b: Initialize WeylScalar parameters\n",
-    "thismodule = __name__\n",
-    "# Current option: Approx_QuasiKinnersley = choice made in Baker, Campanelli, and Lousto. PRD 65, 044001 (2002)\n",
-    "par.initialize_param(par.glb_param(\"char\", thismodule, \"TetradChoice\", \"QuasiKinnersley\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 4b: Set the coordinate system to Cartesian\n",
-    "x = rfm.xxCart[0]\n",
-    "y = rfm.xxCart[1]\n",
-    "z = rfm.xxCart[2]\n",
-    "\n",
-    "# Step 4c: Set which tetrad is used; at the moment, only one supported option\n",
-    "TetradChoice = par.parval_from_str(\"TetradChoice\")\n",
-    "\n",
-    "if TetradChoice == \"QuasiKinnersley\":\n",
-    "    # Eqs 5.6 in https://arxiv.org/pdf/gr-qc/0104063.pdf\n",
-    "    xmoved = x# - xorig\n",
-    "    ymoved = y# - yorig\n",
-    "    zmoved = z# - zorig\n",
-    "\n",
-    "    # Step 5a: Choose 3 orthogonal vectors. Here, we choose one in the azimuthal \n",
-    "    #          direction, one in the radial direction, and the cross product of the two. \n",
-    "    # Eqs 5.7\n",
-    "    v1U = ixp.zerorank1()\n",
-    "    v1U[0] = -ymoved\n",
-    "    v1U[1] = xmoved# + offset\n",
-    "    v1U[2] = 0\n",
-    "    v2U = ixp.zerorank1()\n",
-    "    v2U[0] = xmoved# + offset\n",
-    "    v2U[1] = ymoved\n",
-    "    v2U[2] = zmoved\n",
-    "    v3U = ixp.zerorank1()\n",
-    "    LeviCivitaSymbol_rank3 = define_LeviCivitaSymbol_rank3()\n",
-    "    for a in range(DIM):\n",
-    "        for b in range(DIM):\n",
-    "            for c in range(DIM):\n",
-    "                for d in range(DIM):\n",
-    "                    v3U[a] += sp.sqrt(AB.detgamma) * AB.gammaUU[a][d] \\\n",
-    "                                * LeviCivitaSymbol_rank3[d][b][c] * v1U[b] *v2U[c]\n",
-    "\n",
-    "    # Step 5b: Gram-Schmidt orthonormalization of the vectors.\n",
-    "    # The w_i^a vectors here are used to temporarily hold values on the way to the final vectors e_i^a\n",
-    "\n",
-    "    w1U = ixp.zerorank1()\n",
-    "    for a in range(DIM):\n",
-    "        w1U[a] = v1U[a]\n",
-    "    omega11 = 0\n",
-    "    for a in range(DIM):\n",
-    "        for b in range(DIM):\n",
-    "            omega11 += w1U[a] * w1U[b] * AB.gammaDD[a][b]\n",
-    "    e1U = ixp.zerorank1()\n",
-    "    for a in range(DIM):\n",
-    "        e1U[a] = w1U[a] / sp.sqrt(omega11)\n",
-    "\n",
-    "    omega12 = 0\n",
-    "    for a in range(DIM):\n",
-    "        for b in range(DIM):\n",
-    "            omega12 += e1U[a] * v2U[b] * AB.gammaDD[a][b]\n",
-    "    w2U = ixp.zerorank1()\n",
-    "    for a in range(DIM):\n",
-    "        w2U[a] = v2U[a] - omega12*e1U[a]\n",
-    "    omega22 = 0\n",
-    "    for a in range(DIM):\n",
-    "        for b in range(DIM):\n",
-    "            omega22 += w2U[a] * w2U[b] *AB.gammaDD[a][b]\n",
-    "    e2U = ixp.zerorank1()\n",
-    "    for a in range(DIM):\n",
-    "        e2U[a] = w2U[a] / sp.sqrt(omega22)\n",
-    "\n",
-    "    omega13 = 0\n",
-    "    for a in range(DIM):\n",
-    "        for b in range(DIM):\n",
-    "            omega13 += e1U[a] * v3U[b] * AB.gammaDD[a][b]\n",
-    "    omega23 = 0\n",
-    "    for a in range(DIM):\n",
-    "        for b in range(DIM):\n",
-    "            omega23 += e2U[a] * v3U[b] * AB.gammaDD[a][b]\n",
-    "    w3U = ixp.zerorank1()\n",
-    "    for a in range(DIM):\n",
-    "        w3U[a] = v3U[a] - omega13*e1U[a] - omega23*e2U[a]\n",
-    "    omega33 = 0\n",
-    "    for a in range(DIM):\n",
-    "        for b in range(DIM):\n",
-    "            omega33 += w3U[a] * w3U[b] * AB.gammaDD[a][b]\n",
-    "    e3U = ixp.zerorank1()\n",
-    "    for a in range(DIM):\n",
-    "        e3U[a] = w3U[a] / sp.sqrt(omega33)\n",
-    "        \n",
-    "    # Step 5c: Construct the tetrad itself.\n",
-    "    # Eqs. 5.6\n",
-    "    isqrt2 = 1/sp.sqrt(2)\n",
-    "    ltetU = ixp.zerorank1()\n",
-    "    ntetU = ixp.zerorank1()\n",
-    "    mtetU = ixp.zerorank1()\n",
-    "    mtetccU = ixp.zerorank1()\n",
-    "    for i in range(DIM):\n",
-    "        ltetU[i] = isqrt2 * e2U[i]\n",
-    "        ntetU[i] = -isqrt2 * e2U[i]\n",
-    "        mtetU[i] = isqrt2 * (e3U[i] + sp.I*e1U[i])\n",
-    "        mtetccU[i] = isqrt2 * (e3U[i] - sp.I*e1U[i])\n",
-    "    nn = isqrt2\n",
-    "\n",
-    "else:\n",
-    "    print(\"Error: TetradChoice == \"+par.parval_from_str(\"TetradChoice\")+\" unsupported!\")\n",
-    "    exit(1)"
    ]
   }
  ],
