Psi4 module now seems to be functionally complete

--- a/Tutorial-Psi4.ipynb
+++ b/Tutorial-Psi4.ipynb
@@ -6,7 +6,53 @@
    "source": [
     "# $\\psi_4$\n",
     "\n",
-    "### Author: Zach Etienne"
+    "### Author: Zach Etienne\n",
+    "\n",
+    "<font color='red'>**This module has not yet undergone validation testing.**</font>\n",
+    "\n",
+    "## A Note on Notation\n",
+    "\n",
+    "As is standard in NRPy+, \n",
+    "\n",
+    "* Greek indices range from 0 to 3, inclusive, with the zeroth component denoting the temporal (time) component.\n",
+    "* Latin indices range from 0 to 2, inclusive, with the zeroth component denoting the first spatial component.\n",
+    "\n",
+    "As a corollary, any expressions involving mixed Greek and Latin indices will need to offset one set of indices by one: A Latin index in a four-vector will be incremented and a Greek index in a three-vector will be decremented (however, the latter case does not occur in this tutorial module).\n",
+    "\n",
+    "<a id='toc'></a>\n",
+    "\n",
+    "# Introduction, Table of Contents\n",
+    "$$\\label{toc}$$\n",
+    "\n",
+    "This module constructs $\\psi_4$, a quantity that is immensely useful when extracting gravitational wave content from a numerical relativity simulation. $\\psi_4$ is related to the gravitational wave strain via\n",
+    "\n",
+    "$$\n",
+    "\\psi_4 = \\ddot{h}_+ - i \\ddot{h}_\\times.\n",
+    "$$\n",
+    "\n",
+    "We construct $\\psi_4$ from the standard ADM spatial metric $\\gamma_{ij}$ and extrinsic curvature $K_{ij}$, and their derivatives. The full expression is given by Eq. 5.1 in [Baker, Campanelli, Lousto (2001)](https://arxiv.org/pdf/gr-qc/0104063.pdf):\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\psi_4 &= \\left[ {R}_{ijkl}+2K_{i[k}K_{l]j}\\right]\n",
+    "{n}^i\\bar{m}^j{n}^k\\bar{m}^l  \\\\\n",
+    "& -8\\left[ K_{j[k,l]}+{\\Gamma }_{j[k}^pK_{l]p}\\right]\n",
+    "{n}^{[0}\\bar{m}^{j]}{n}^k\\bar{m}^l \\\\\n",
+    "& +4\\left[ {R}_{jl}-K_{jp}K_l^p+KK_{jl}\\right]\n",
+    "{n}^{[0}\\bar{m}^{j]}{n}^{[0}\\bar{m}^{l]},\n",
+    "\\end{align}\n",
+    "\n",
+    "Note that $\\psi_4$ is imaginary, with the imaginary components originating from the tetrad vector $m^\\mu$. This module does not specify a tetrad; instead it only constructs the above expression leaving $m^\\mu$ and $n^\\mu$ unspecified. The [next module on tetrads defines these tetrad quantities](Tutorial-Psi4_tetrads.ipynb) (currently only a quasi-Kinnersley tetrad is supported).\n",
+    "\n",
+    "The module is organized as follows:\n",
+    "\n",
+    "1. [Step 1](#initializenrpy): Initialize needed NRPy+ modules\n",
+    "1. [Step 2](#riemann): Constructing the 3-Riemann tensor $R_{ik\\ell m}$\n",
+    "1. [Step 3](#termone): Constructing the rank-4 tensor in Term 1 of $\\psi_4$: $R_{ijkl} + 2 K_{i[k} K_{l]j}$\n",
+    "1. [Step 4](#termtwo): Constructing the rank-3 tensor in Term 2 of $\\psi_4$: $-8 \\left(K_{j[k,l]} + \\Gamma^{p}_{j[k} K_{l]p} \\right)$\n",
+    "1. [Step 5](#termthree): Constructing the rank-2 tensor in term 3 of $\\psi_4$: $+4 \\left(R_{jl} - K_{jp} K^p_l + K K_{jl} \\right)$\n",
+    "1. [Step 6](#psifour): Constructing $\\psi_4$ through contractions of the above terms with arbitrary tetrad vectors $n^\\mu$ and $m^\\mu$\n",
+    "1. [Step 7](#code_validation): Code Validation against BSSN.Psi4 NRPy+ module\n",
+    "1. [Step 8](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
    ]
   },
   {
@@ -69,7 +115,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='riemann'></a>\n",
+    "\n",
     "# Step 2: Constructing the 3-Riemann tensor $R_{ik\\ell m}$\n",
+    "$$\\label{riemann}$$\n",
+    "\n",
     "Analogously to Christoffel symbols, the Riemann tensor is a measure of the curvature of an $N$-dimensional manifold. Thus the 3-Riemann tensor is not simply a projection of the 4-Riemann tensor (see e.g., Eq. 2.7 of [Campanelli *et al* (1998)](https://arxiv.org/pdf/gr-qc/9803058.pdf) for the relation between 4-Riemann and 3-Riemann), as $N$-dimensional Riemann tensors are meant to define a notion of curvature given only the associated $N$-dimensional metric. \n",
     "\n",
     "So, given the ADM 3-metric, the Riemann tensor in arbitrary dimension is given by the 3-dimensional version of Eq. 1.19 in Baumgarte & Shapiro's *Numerical Relativity*. I.e.,\n",
@@ -137,6 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ... then we add the term on the right:\n",
     "gammaDD = AB.gammaDD\n",
     "GammaUDD = AB.GammaUDD\n",
     "\n",
@@ -154,7 +205,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='termone'></a>\n",
+    "\n",
     "# Step 3: Constructing the rank-4 tensor in Term 1 of $\\psi_4$: $R_{ijkl} + 2 K_{i[k} K_{l]j} $\n",
+    "$$\\label{termone}$$\n",
     "\n",
     "Following Eq. 5.1 in [Baker, Campanelli, Lousto (2001)](https://arxiv.org/pdf/gr-qc/0104063.pdf), the rank-4 tensor in the first term of $\\psi_4$ is given by\n",
     "\n",
@@ -185,12 +239,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 4: Constructing the rank-3 tensor in Term 2 of $\\psi_4$: \n",
+    "<a id='termtwo'></a>\n",
+    "\n",
+    "# Step 4: Constructing the rank-3 tensor in Term 2 of $\\psi_4$: $-8 \\left(K_{j[k,l]} + \\Gamma^{p}_{j[k} K_{l]p} \\right)$\n",
+    "$$\\label{termtwo}$$\n",
     "\n",
     "Following Eq. 5.1 in [Baker, Campanelli, Lousto (2001)](https://arxiv.org/pdf/gr-qc/0104063.pdf), the rank-3 tensor in the second term of $\\psi_4$ is given by\n",
     "\n",
     "$$\n",
-    "-8 \\left(K_{j[k,l]} + \\Gamma^{p}_{j[k} K_{l]p} \\right) = \n",
+    "-8 \\left(K_{j[k,l]} + \\Gamma^{p}_{j[k} K_{l]p} \\right)\n",
     "$$\n",
     "First let's construct the first term in this sum: $K_{j[k,l]} = \\frac{1}{2} (K_{jk,l} - K_{jl,k})$:"
    ]
@@ -216,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "... then we construct the secon term in this sum: $\\Gamma^{p}_{j[k} K_{l]p} = \\frac{1}{2} (\\Gamma^{p}_{jk} K_{lp}-\\Gamma^{p}_{jl} K_{kp})$:"
+    "... then we construct the second term in this sum: $\\Gamma^{p}_{j[k} K_{l]p} = \\frac{1}{2} (\\Gamma^{p}_{jk} K_{lp}-\\Gamma^{p}_{jl} K_{kp})$:"
    ]
   },
   {
@@ -225,6 +282,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ... then we construct the second term in this sum: \n",
+    "#  \\Gamma^{p}_{j[k} K_{l]p} = \\frac{1}{2} (\\Gamma^{p}_{jk} K_{lp}-\\Gamma^{p}_{jl} K_{kp}):\n",
     "for j in range(DIM):\n",
     "    for k in range(DIM):\n",
     "        for l in range(DIM):\n",
@@ -245,6 +304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Finally, we multiply the term by $-8$:\n",
     "for j in range(DIM):\n",
     "    for k in range(DIM):\n",
     "        for l in range(DIM):\n",
@@ -255,7 +315,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 5: Constructing the rank-2 tensor in term 3 of $\\psi_4$:\n",
+    "<a id='termthree'></a>\n",
+    "\n",
+    "# Step 5: Constructing the rank-2 tensor in term 3 of $\\psi_4$: $+4 \\left(R_{jl} - K_{jp} K^p_l + K K_{jl} \\right)$\n",
+    "$$\\label{termthree}$$\n",
     "\n",
     "Following Eq. 5.1 in [Baker, Campanelli, Lousto (2001)](https://arxiv.org/pdf/gr-qc/0104063.pdf), the rank-2 tensor in the third term of $\\psi_4$ is given by\n",
     "\n",
@@ -304,6 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ... then we add on the second term in parentheses, where $K^p_l = \\gamma^{mp} K_{ml}$\n",
     "for j in range(DIM):\n",
     "    for l in range(DIM):\n",
     "        for m in range(DIM):\n",
@@ -324,6 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Finally we add the third term in parentheses, and multiply all terms by $+4$:\n",
     "for j in range(DIM):\n",
     "    for l in range(DIM):\n",
     "        for i in range(DIM):\n",
@@ -338,7 +403,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 6: Constructing $\\psi_4$ through contractions of the above terms with an arbitrary tetrad\n",
+    "<a id='psifour'></a>\n",
+    "\n",
+    "# Step 6: Constructing $\\psi_4$ through contractions of the above terms with an arbitrary tetrad vectors $m^\\mu$ and $n^\\mu$\n",
+    "$$\\label{psifour}$$\n",
     "\n",
     "Eq. 5.1 in [Baker, Campanelli, Lousto (2001)](https://arxiv.org/pdf/gr-qc/0104063.pdf) writes $\\psi_4$ (which is complex) as the contraction of each of the above terms with products of tetrad vectors:\n",
     "\n",
@@ -405,24 +473,118 @@
     "    for k in range(DIM):\n",
     "        for l in range(DIM):\n",
     "            psi4_re += rank3term2[j][k][l] * \\\n",
-    "                       sp.Rational(1,2)*(+tetrad_product__Real_psi4(n4U,mre4U,mim4U, 0,j+1,k+1,l+1) \\\n",
+    "                       sp.Rational(1,2)*(+tetrad_product__Real_psi4(n4U,mre4U,mim4U, 0,j+1,k+1,l+1)\n",
     "                                         -tetrad_product__Real_psi4(n4U,mre4U,mim4U, j+1,0,k+1,l+1) )\n",
     "            psi4_im += rank3term2[j][k][l] * \\\n",
-    "                       sp.Rational(1,2)*(+tetrad_product__Imag_psi4(n4U,mre4U,mim4U, 0,j+1,k+1,l+1) \\\n",
+    "                       sp.Rational(1,2)*(+tetrad_product__Imag_psi4(n4U,mre4U,mim4U, 0,j+1,k+1,l+1)\n",
     "                                         -tetrad_product__Imag_psi4(n4U,mre4U,mim4U, j+1,0,k+1,l+1) )\n",
     "# Third term:\n",
     "for j in range(DIM):\n",
     "    for l in range(DIM):\n",
     "        psi4_re += rank2term3[j][l] * \\\n",
-    "                       (sp.Rational(1,4)*(+tetrad_product__Real_psi4(n4U,mre4U,mim4U, 0,j+1,0,l+1) \\\n",
-    "                                          -tetrad_product__Real_psi4(n4U,mre4U,mim4U, j+1,0,0,l+1) \\\n",
-    "                                          -tetrad_product__Real_psi4(n4U,mre4U,mim4U, 0,j+1,l+1,0) \\\n",
+    "                       (sp.Rational(1,4)*(+tetrad_product__Real_psi4(n4U,mre4U,mim4U, 0,j+1,0,l+1)\n",
+    "                                          -tetrad_product__Real_psi4(n4U,mre4U,mim4U, j+1,0,0,l+1)\n",
+    "                                          -tetrad_product__Real_psi4(n4U,mre4U,mim4U, 0,j+1,l+1,0)\n",
     "                                          +tetrad_product__Real_psi4(n4U,mre4U,mim4U, j+1,0,l+1,0)))\n",
     "        psi4_im += rank2term3[j][l] * \\\n",
-    "                       (sp.Rational(1,4)*(+tetrad_product__Imag_psi4(n4U,mre4U,mim4U, 0,j+1,0,l+1) \\\n",
-    "                                          -tetrad_product__Imag_psi4(n4U,mre4U,mim4U, j+1,0,0,l+1) \\\n",
-    "                                          -tetrad_product__Imag_psi4(n4U,mre4U,mim4U, 0,j+1,l+1,0) \\\n",
+    "                       (sp.Rational(1,4)*(+tetrad_product__Imag_psi4(n4U,mre4U,mim4U, 0,j+1,0,l+1)\n",
+    "                                          -tetrad_product__Imag_psi4(n4U,mre4U,mim4U, j+1,0,0,l+1)\n",
+    "                                          -tetrad_product__Imag_psi4(n4U,mre4U,mim4U, 0,j+1,l+1,0)\n",
     "                                          +tetrad_product__Imag_psi4(n4U,mre4U,mim4U, j+1,0,l+1,0)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='code_validation'></a>\n",
+    "\n",
+    "# Step 6: Code validation against BSSN.Psi4 NRPy+ module \\[Back to [top](#toc)\\]\n",
+    "$$\\label{code_validation}$$\n",
+    "\n",
+    "As a code validation check, we verify agreement in the SymPy expressions for the RHSs of the BSSN equations between\n",
+    "1. this tutorial and \n",
+    "2. the NRPy+ BSSN.Psi4 module.\n",
+    "\n",
+    "By default, we analyze the RHSs in Spherical coordinates, though other coordinate systems may be chosen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vvv Ignore the minor warnings below. vvv\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
+      "^^^ Ignore the minor warnings above. ^^^\n",
+      "\n",
+      "Consistency check between this tutorial and BSSN.Psi4 NRPy+ module: ALL SHOULD BE ZERO.\n",
+      "psi4_im - BP4.psi4_im = 0\n",
+      "psi4_re - BP4.psi4_re = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Call the BSSN_RHSs() function from within the\n",
+    "#          BSSN/BSSN_RHSs.py module,\n",
+    "#          which should do exactly the same as in Steps 1-16 above.\n",
+    "print(\"vvv Ignore the minor warnings below. vvv\")\n",
+    "import BSSN.Psi4 as BP4\n",
+    "BP4.Psi4()\n",
+    "print(\"^^^ Ignore the minor warnings above. ^^^\\n\")\n",
+    "\n",
+    "print(\"Consistency check between this tutorial and BSSN.Psi4 NRPy+ module: ALL SHOULD BE ZERO.\")\n",
+    "\n",
+    "print(\"psi4_im - BP4.psi4_im = \" + str(psi4_im - BP4.psi4_im))\n",
+    "print(\"psi4_re - BP4.psi4_re = \" + str(psi4_re - BP4.psi4_re))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='latex_pdf_output'></a>\n",
+    "\n",
+    "# Step 7: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "$$\\label{latex_pdf_output}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook Tutorial-Psi4.ipynb to latex\n",
+      "[NbConvertApp] Writing 53763 bytes to Tutorial-Psi4.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-Psi4.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-Psi4.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-Psi4.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-Psi4.tex\n",
+    "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
   }
  ],
