Psi4_tetrads: Now a complete NRPy+ module.

--- a/Tutorial-Psi4_tetrads.ipynb
+++ b/Tutorial-Psi4_tetrads.ipynb
@@ -7,7 +7,48 @@
     "# Tetrads for Evaluating $\\psi_4$\n",
     "\n",
     "### Authors: Patrick Nelson & Zach Etienne\n",
-    "\n"
+    "\n",
+    "<font color='red'>**This module has not yet undergone validation testing.**</font>\n",
+    "\n",
+    "## A Note on Notation\n",
+    "\n",
+    "As is standard in NRPy+, \n",
+    "\n",
+    "* Greek indices range from 0 to 3, inclusive, with the zeroth component denoting the temporal (time) component.\n",
+    "* Latin indices range from 0 to 2, inclusive, with the zeroth component denoting the first spatial component.\n",
+    "\n",
+    "As a corollary, any expressions involving mixed Greek and Latin indices will need to offset one set of indices by one: A Latin index in a four-vector will be incremented and a Greek index in a three-vector will be decremented (however, the latter case does not occur in this tutorial module).\n",
+    "\n",
+    "<a id='toc'></a>\n",
+    "\n",
+    "# Introduction, Table of Contents\n",
+    "$$\\label{toc}$$\n",
+    "\n",
+    "This module constructs tetrad vectors $l^\\mu$, $m^\\mu$, and $n^\\mu$ for the $\\psi_4$ Weyl scalar, a quantity that is immensely useful when extracting gravitational wave content from a numerical relativity simulation. $\\psi_4$ is related to the gravitational wave strain via\n",
+    "\n",
+    "$$\n",
+    "\\psi_4 = \\ddot{h}_+ - i \\ddot{h}_\\times.\n",
+    "$$\n",
+    "\n",
+    "We construct $\\psi_4$ from the standard ADM spatial metric $\\gamma_{ij}$ and extrinsic curvature $K_{ij}$, and their derivatives. The full expression is given by Eq. 5.1 in [Baker, Campanelli, Lousto (2001)](https://arxiv.org/pdf/gr-qc/0104063.pdf):\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\psi_4 &= \\left[ {R}_{ijkl}+2K_{i[k}K_{l]j}\\right]\n",
+    "{n}^i\\bar{m}^j{n}^k\\bar{m}^l  \\\\\n",
+    "& -8\\left[ K_{j[k,l]}+{\\Gamma }_{j[k}^pK_{l]p}\\right]\n",
+    "{n}^{[0}\\bar{m}^{j]}{n}^k\\bar{m}^l \\\\\n",
+    "& +4\\left[ {R}_{jl}-K_{jp}K_l^p+KK_{jl}\\right]\n",
+    "{n}^{[0}\\bar{m}^{j]}{n}^{[0}\\bar{m}^{l]},\n",
+    "\\end{align}\n",
+    "\n",
+    "Note that $\\psi_4$ is imaginary, with the imaginary components originating from the tetrad vector $m^\\mu$. This module does not specify a tetrad; instead it only constructs the above expression leaving $m^\\mu$ and $n^\\mu$ unspecified. This module defines these tetrad quantities.\n",
+    "\n",
+    "The module is organized as follows:\n",
+    "\n",
+    "1. [Step 1](#initializenrpy): Initialize needed NRPy+ modules\n",
+    "1. [Step 2](#quasikinnersley): The quasi-Kinnersley tetrad\n",
+    "1. [Step 3](#code_validation): Code Validation against BSSN.Psi4_tetrads NRPy+ module\n",
+    "1. [Step 4](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
    ]
   },
   {
@@ -73,7 +114,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 2: The quasi-Kinnersley tetrad\n",
+    "<a id='quasikinnersley'></a>\n",
+    "\n",
+    "# Step 2: The quasi-Kinnersley tetrad \\[Back to [top](#toc)\\]\n",
+    "$$\\label{quasikinnersley}$$\n",
     "\n",
     "To define the Weyl scalars, first a tetrad must be chosen. Below, for compatibility with the [WeylScal4 diagnostic module](https://bitbucket.org/einsteintoolkit/einsteinanalysis/src/master/WeylScal4/), we implement the quasi-Kinnersley tetrad of [Baker, Campanelli, Lousto (2001)](https://arxiv.org/pdf/gr-qc/0104063.pdf).\n",
     "\n",
@@ -223,6 +267,118 @@
     "    n4U[a+1] = -isqrt2 * e2U[a]\n",
     "    mre4U[a+1] =  isqrt2 * e3U[a]\n",
     "    mim4U[a+1] =  isqrt2 * e1U[a]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='code_validation'></a>\n",
+    "\n",
+    "# Step 3: Code validation against BSSN.Psi4_tetrads NRPy+ module \\[Back to [top](#toc)\\]\n",
+    "$$\\label{code_validation}$$\n",
+    "\n",
+    "As a code validation check, we verify agreement in the SymPy expressions for the RHSs of the BSSN equations between\n",
+    "1. this tutorial and \n",
+    "2. the NRPy+ BSSN.Psi4_tetrads module.\n",
+    "\n",
+    "By default, we compare these expressions in Spherical coordinates, though other coordinate systems may be chosen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vvv Ignore the minor warnings below. vvv\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
+      "^^^ Ignore the minor warnings above. ^^^\n",
+      "\n",
+      "ALL TESTS PASSED!\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_passed=True\n",
+    "def comp_func(expr1,expr2,basename,prefixname2=\"BP4T.\"):\n",
+    "    if str(expr1-expr2)!=\"0\":\n",
+    "        print(basename+\" - \"+prefixname2+basename+\" = \"+ str(expr1-expr2))\n",
+    "        all_passed=False\n",
+    "\n",
+    "def gfnm(basename,idx1,idx2=None,idx3=None):\n",
+    "    if idx2==None:\n",
+    "        return basename+\"[\"+str(idx1)+\"]\"\n",
+    "    if idx3==None:\n",
+    "        return basename+\"[\"+str(idx1)+\"][\"+str(idx2)+\"]\"\n",
+    "    return basename+\"[\"+str(idx1)+\"][\"+str(idx2)+\"][\"+str(idx3)+\"]\"\n",
+    "\n",
+    "expr_list = []\n",
+    "exprcheck_list = []\n",
+    "namecheck_list = []\n",
+    "\n",
+    "print(\"vvv Ignore the minor warnings below. vvv\")\n",
+    "import BSSN.Psi4_tetrads as BP4T\n",
+    "BP4T.Psi4_tetrads()\n",
+    "print(\"^^^ Ignore the minor warnings above. ^^^\\n\")\n",
+    "\n",
+    "for mu in range(4):\n",
+    "    namecheck_list.extend([gfnm(\"l4U\",mu),gfnm(\"n4U\",mu),gfnm(\"mre4U\",mu),gfnm(\"mim4U\",mu)])\n",
+    "    exprcheck_list.extend([BP4T.l4U[mu],BP4T.n4U[mu],BP4T.mre4U[mu],BP4T.mim4U[mu]])\n",
+    "    expr_list.extend([l4U[mu],n4U[mu],mre4U[mu],mim4U[mu]])\n",
+    "\n",
+    "for i in range(len(expr_list)):\n",
+    "    comp_func(expr_list[i],exprcheck_list[i],namecheck_list[i])\n",
+    "\n",
+    "if all_passed:\n",
+    "    print(\"ALL TESTS PASSED!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='latex_pdf_output'></a>\n",
+    "\n",
+    "# Step 4: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "$$\\label{latex_pdf_output}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook Tutorial-Psi4_tetrads.ipynb to latex\n",
+      "[NbConvertApp] Writing 40303 bytes to Tutorial-Psi4_tetrads.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-Psi4_tetrads.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-Psi4_tetrads.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-Psi4_tetrads.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-Psi4_tetrads.tex\n",
+    "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
   }
  ],
