Psi4_tetrads: convert from Cartesian to reference metric basis at the top. Now tetrad vectors are in correct basis.

--- a/Tutorial-Psi4.ipynb
+++ b/Tutorial-Psi4.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "Note that $\\psi_4$ is imaginary, with the imaginary components originating from the tetrad vector $m^\\mu$. This module does not specify a tetrad; instead it only constructs the above expression leaving $m^\\mu$ and $n^\\mu$ unspecified. The [next module on tetrads defines these tetrad quantities](Tutorial-Psi4_tetrads.ipynb) (currently only a quasi-Kinnersley tetrad is supported).\n",
     "\n",
-    "The module is organized as follows:\n",
+    "**This tutorial module is organized as follows:**\n",
     "\n",
     "1. [Step 1](#initializenrpy): Initialize needed NRPy+ modules\n",
     "1. [Step 2](#riemann): Constructing the 3-Riemann tensor $R_{ik\\ell m}$\n",
