--- a/Tutorial-Psi4_tetrads.ipynb
+++ b/Tutorial-Psi4_tetrads.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "Note that $\\psi_4$ is imaginary, with the imaginary components originating from the tetrad vector $m^\\mu$. This module does not specify a tetrad; instead it only constructs the above expression leaving $m^\\mu$ and $n^\\mu$ unspecified. This module defines these tetrad quantities.\n",
     "\n",
-    "The module is organized as follows:\n",
+    "**This tutorial module is organized as follows:**\n",
     "\n",
     "1. [Step 1](#initializenrpy): Initialize needed NRPy+ modules\n",
     "1. [Step 2](#quasikinnersley): The quasi-Kinnersley tetrad\n",
@@ -128,7 +128,15 @@
     "    v_3^a &= {\\rm det}(\\gamma)^{1/2} \\gamma^{ad} \\epsilon_{dbc} v_1^b v_2^c,\n",
     "\\end{align}\n",
     "\n",
-    "To evaluate the above, we will need the Levi-Civita symbol $\\epsilon_{dbc}$, "
+    "Notice that $v_1^a$ and $v_2^a$ assume the Cartesian basis, but $\\gamma^{ad}$ will be in the $xx^i$ basis given by the chosen reference_metric::CoordSystem. Thus to construct $v_3^a$, we must first perform a change of basis on $v_1^a$ and $v_2^a$:\n",
+    "\n",
+    "$$\n",
+    "v_{1,{\\rm xx}}^a = \\frac{\\partial xx^a}{\\partial x_{\\rm Cart}^b} v_{1,{\\rm Cart}}^a.\n",
+    "$$\n",
+    "This equation is problematic because we generally do not have a closed-form expression for components of the $xx^a$ vector as functions of the Cartesian coordinate vector components $x_{\\rm Cart}^a$. However we do have closed-form expressions for components of $x_{\\rm Cart}^a$ as functions of $xx^a$. Thus we can construct the needed Jacobian matrix $\\frac{\\partial xx^a}{\\partial x_{\\rm Cart}^b}$ by evaluating the derivative $\\frac{\\partial x_{\\rm Cart}^b}{\\partial xx^a}$ and performing a simple matrix inversion:\n",
+    "$$\n",
+    "\\frac{\\partial xx^a}{\\partial x_{\\rm Cart}^b} = \\left(\\frac{\\partial x_{\\rm Cart}^b}{\\partial xx^a} \\right)^{-1}.\n",
+    "$$"
    ]
   },
   {
@@ -143,14 +151,50 @@
     "#           BSSN.ADM_in_terms_of_BSSN\n",
     "x,y,z = par.Cparameters(\"REAL\",thismodule,[\"x\",\"y\",\"z\"])\n",
     "\n",
-    "v1U = ixp.zerorank1()\n",
-    "v2U = ixp.zerorank1()\n",
-    "v3U = ixp.zerorank1()\n",
+    "v1UCart = ixp.zerorank1()\n",
+    "v2UCart = ixp.zerorank1()\n",
     "\n",
     "detgamma = AB.detgamma\n",
     "gammaUU  = AB.gammaUU\n",
     "\n",
-    "# Step 2.b: Define the rank-3 version of the Levi-Civita symbol. Amongst\n",
+    "# Step 2.b: Define v1U and v2U\n",
+    "v1UCart = [-y,x,sp.sympify(0)]\n",
+    "v2UCart = [x,y,z]\n",
+    "\n",
+    "# Step 2.c: Construct the Jacobian d x_Cart^i / d xx^j\n",
+    "Jac_dUCart_dDrfmUD = ixp.zerorank2()\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        Jac_dUCart_dDrfmUD[i][j] = sp.diff(rfm.xxCart[i],rfm.xx[j])\n",
+    "\n",
+    "# Step 2.d: Invert above Jacobian to get needed d xx^j / d x_Cart^i\n",
+    "Jac_dUrfm_dDCartUD, dummyDET = ixp.generic_matrix_inverter3x3(Jac_dUCart_dDrfmUD)\n",
+    "\n",
+    "# Step 2.e: Transform v1U and v2U from the Cartesian to the xx^i basis\n",
+    "v1U = ixp.zerorank1()\n",
+    "v2U = ixp.zerorank1()\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        v1U[i] += Jac_dUrfm_dDCartUD[i][j]*v1UCart[j]\n",
+    "        v2U[i] += Jac_dUrfm_dDCartUD[i][j]*v2UCart[j]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "... next we construct the third tetrad vector $v_3^a={\\rm det}(\\gamma)^{1/2} \\gamma^{ad} \\epsilon_{dbc} v_1^b v_2^c$:\n",
+    "\n",
+    "Let's start by defining the Levi-Civita symbol $\\epsilon_{dbc}$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2.f: Define the rank-3 version of the Levi-Civita symbol. Amongst\n",
     "#         other uses, this is needed for the construction of the approximate \n",
     "#         quasi-Kinnersley tetrad.\n",
     "def define_LeviCivitaSymbol_rank3(DIM=-1):\n",
@@ -166,11 +210,8 @@
     "                LeviCivitaSymbol[i][j][k] = (i - j) * (j - k) * (k - i) / 2\n",
     "    return LeviCivitaSymbol\n",
     "\n",
-    "# Step 2.c: define v1U and v2U\n",
-    "v1U = [-y,x,sp.sympify(0)]\n",
-    "v2U = [x,y,z]\n",
-    "\n",
-    "# Step 2.d: define v3U\n",
+    "# Step 2.g: Define v3U\n",
+    "v3U = ixp.zerorank1()\n",
     "LeviCivitaSymbolDDD = define_LeviCivitaSymbol_rank3(DIM=3)\n",
     "for a in range(DIM):\n",
     "    for b in range(DIM):\n",
@@ -194,11 +235,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 2.e: Define omega_{ij}\n",
+    "# Step 2.h: Define omega_{ij}\n",
     "omegaDD = ixp.zerorank2()\n",
     "gammaDD = AB.gammaDD\n",
     "def v_vectorDU(v1U,v2U,v3U,  i,a):\n",
@@ -218,7 +259,7 @@
     "            for b in range(DIM):\n",
     "                omegaDD[i][j] += v_vectorDU(v1U,v2U,v3U, i,a)*v_vectorDU(v1U,v2U,v3U, j,b)*gammaDD[a][b]\n",
     "\n",
-    "# Step 2.f: Define e^a_i. Note that:\n",
+    "# Step 2.i: Define e^a_i. Note that:\n",
     "#           omegaDD[0][0] = \\omega_{11} above; \n",
     "#           omegaDD[1][1] = \\omega_{22} above, etc.\n",
     "e1U = ixp.zerorank1()\n",
@@ -248,11 +289,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "# Step 2.g: Construct l^a, n^a, and m^a\n",
+    "# Step 2.j: Construct l^a, n^a, and m^a\n",
     "isqrt2 = 1/sp.sqrt(2)\n",
     "l4U = ixp.zerorank1(DIM=4)\n",
     "n4U = ixp.zerorank1(DIM=4)\n",
@@ -287,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -360,10 +403,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Psi4_tetrads.ipynb to latex\n",
-      "[NbConvertApp] Writing 40568 bytes to Tutorial-Psi4_tetrads.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
+      "[NbConvertApp] Writing 43526 bytes to Tutorial-Psi4_tetrads.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
