--- a/Tutorial-GRMHD_Equations-Cartesian.ipynb
+++ b/Tutorial-GRMHD_Equations-Cartesian.ipynb
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -707,8 +707,8 @@
     "h = sp.symbols( \"h\")\n",
     "\n",
     "for ind in range(2) : \n",
-    "    gmunuDDind[ind] = ixp.declarerank2(\"gmunuDD{0}\".format(ind),\"sym01\",DIM=4) #derivative of gmunu in some direction\n",
-    "    gammaDDind[ind] = ixp.declarerank2(\"gammaDD{0}\".format(ind),\"sym01\")\n",
+    "    gmunuDDind[ind] = ixp.zerorank2(DIM=4) #derivative of gmunu in some direction\n",
+    "    gammaDDind[ind] = ixp.zerorank2()\n",
     "\n",
     "    components = [\"xx\", \"xy\", \"xz\", \"yy\", \"yz\", \"zz\"]\n",
     "    names = \"\"\n",
@@ -732,7 +732,7 @@
     "    u20, u2x, u2y, u2z = sp.symbols(\"u2[0] u2[1] u2[2] u2[3]\")\n",
     "\n",
     "\n",
-    "    shiftU = ixp.declarerank1(\"shiftU\")\n",
+    "    shiftU = ixp.zerorank1()\n",
     "    shiftU[0] = beta_x \n",
     "    shiftU[1] = beta_y\n",
     "    shiftU[2] = beta_z \n",
@@ -748,9 +748,8 @@
     "        gmunuDDind[ind][0][i+1] = shiftU[i]\n",
     "        for j in range(DIM) : \n",
     "            gmunuDDind[ind][i+1][j+1] = gammaDDind[ind][i][j]\n",
-    " \n",
     "\n",
-    "dgmunuDD = ixp.declarerank2(\"dgmunuDD\",\"sym01\",DIM=4)\n",
+    "dgmunuDD = ixp.zerorank2(DIM=4)\n",
     "source = 0\n",
     "for i in range(DIM) : \n",
     "    for j in range(DIM) : \n",
@@ -815,33 +814,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wrote to file \"NRPY+rotateMetric.h\"\n",
-      "/*\n",
-      " *  Original SymPy expressions:\n",
-      " *  \"[Tmunu00 = 1.0*rho*u0**2*(ie + p/rho + 1.0) - 1.0*p/mi.alpha**2,\n",
-      " *    Tmunu12 = n0[0]*(1.0*rho*u0**2*vx*(ie + p/rho + 1.0) + 1.0*mi.betaX*p/mi.alpha**2) + n0[1]*(1.0*rho*u0**2*vy*(ie + p/rho + 1.0) + 1.0*mi.betaY*p/mi.alpha**2) + n0[2]*(1.0*rho*u0**2*vz*(ie + p/rho + 1.0) + 1.0*mi.betaZ*p/mi.alpha**2),\n",
-      " *    Tmunu21 = 1.0*n0[0]*(rho*u0**2*vx*(ie + p/rho + 1.0) + mi.betaX*p/mi.alpha**2) + 1.0*n0[1]*(rho*u0**2*vy*(ie + p/rho + 1.0) + mi.betaY*p/mi.alpha**2) + 1.0*n0[2]*(rho*u0**2*vz*(ie + p/rho + 1.0) + mi.betaZ*p/mi.alpha**2)]\"\n",
-      " */\n",
-      "{\n",
-      "   const double tmp0 = p/pow(mi.alpha, 2);\n",
-      "   const double tmp1 = 1.0*tmp0;\n",
-      "   const double tmp2 = rho*pow(u0, 2)*(ie + p/rho + 1.0);\n",
-      "   const double tmp3 = 1.0*tmp2;\n",
-      "   Tmunu00 = -tmp1 + tmp3;\n",
-      "   Tmunu12 = n0[0]*(mi.betaX*tmp1 + tmp3*vx) + n0[1]*(mi.betaY*tmp1 + tmp3*vy) + n0[2]*(mi.betaZ*tmp1 + tmp3*vz);\n",
-      "   Tmunu21 = 1.0*n0[0]*(mi.betaX*tmp0 + tmp2*vx) + 1.0*n0[1]*(mi.betaY*tmp0 + tmp2*vy) + 1.0*n0[2]*(mi.betaZ*tmp0 + tmp2*vz);\n",
-      "}\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "RotUD = ixp.declarerank2(\"RotUD\", \"nosym\", DIM=4)\n",
     "RotInvUD = ixp.declarerank2(\"RotInvUD\", \"nosym\", DIM=4)\n",
@@ -950,37 +925,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/*\n",
-      " *  Original SymPy expression:\n",
-      " *  \"rootRho = con[iSx]**2*mi.gamDDxx + 2*con[iSx]*con[iSy]*mi.gamDDxy + 2*con[iSx]*con[iSz]*mi.gamDDxz + con[iSy]**2*mi.gamDDyy + 2*con[iSy]*con[iSz]*mi.gamDDyz + con[iSz]**2*mi.gamDDzz + mi2.alpha**2*mi2.rtDetGamma**2*rho**2*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))**2 + rhostar*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))**2*(mi.gamDDxx*mi2.betaX**2 + 2*mi.gamDDxy*mi2.betaX*mi2.betaY + 2*mi.gamDDxz*mi2.betaX*mi2.betaZ + mi.gamDDyy*mi2.betaY**2 + 2*mi.gamDDyz*mi2.betaY*mi2.betaZ + mi.gamDDzz*mi2.betaZ**2 - mi2.alpha**2) + rhostar*(2*c**2 + 2*cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))*(con[iSx]*mi.gamDDxx*mi2.betaX + con[iSx]*mi.gamDDxy*mi2.betaY + con[iSx]*mi.gamDDxz*mi2.betaZ + con[iSy]*mi.gamDDxy*mi2.betaX + con[iSy]*mi.gamDDyy*mi2.betaY + con[iSy]*mi.gamDDyz*mi2.betaZ + con[iSz]*mi.gamDDxz*mi2.betaX + con[iSz]*mi.gamDDyz*mi2.betaY + con[iSz]*mi.gamDDzz*mi2.betaZ)\"\n",
-      " */\n",
-      "{\n",
-      "   const double tmp0 = con[iSy]*mi.gamDDxy;\n",
-      "   const double tmp1 = 2*con[iSx];\n",
-      "   const double tmp2 = con[iSz]*mi.gamDDxz;\n",
-      "   const double tmp3 = con[iSz]*mi.gamDDyz;\n",
-      "   const double tmp4 = pow(mi2.alpha, 2);\n",
-      "   const double tmp5 = pow(c, 2);\n",
-      "   const double tmp6 = gamma1 - 1;\n",
-      "   const double tmp7 = cs2_0*pow(rho/rho_0, tmp6)/tmp6;\n",
-      "   const double tmp8 = pow(tmp5 + tmp7, 2);\n",
-      "   const double tmp9 = mi.gamDDxy*mi2.betaY;\n",
-      "   const double tmp10 = 2*mi2.betaX;\n",
-      "   const double tmp11 = mi.gamDDxz*mi2.betaZ;\n",
-      "   const double tmp12 = mi.gamDDyz*mi2.betaZ;\n",
-      "   rootRho = pow(con[iSx], 2)*mi.gamDDxx + pow(con[iSy], 2)*mi.gamDDyy + 2*con[iSy]*tmp3 + pow(con[iSz], 2)*mi.gamDDzz + pow(mi2.rtDetGamma, 2)*pow(rho, 2)*tmp4*tmp8 + rhostar*tmp8*(mi.gamDDxx*pow(mi2.betaX, 2) + mi.gamDDyy*pow(mi2.betaY, 2) + mi.gamDDzz*pow(mi2.betaZ, 2) + 2*mi2.betaY*tmp12 + tmp10*tmp11 + tmp10*tmp9 - tmp4) + rhostar*(2*tmp5 + 2*tmp7)*(con[iSx]*mi.gamDDxx*mi2.betaX + con[iSx]*tmp11 + con[iSx]*tmp9 + con[iSy]*mi.gamDDyy*mi2.betaY + con[iSy]*tmp12 + con[iSz]*mi.gamDDzz*mi2.betaZ + mi2.betaX*tmp0 + mi2.betaX*tmp2 + mi2.betaY*tmp3) + tmp0*tmp1 + tmp1*tmp2;\n",
-      "}\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "DIM = 3\n",
     "# Declare rank-1 contravariant (\"v\") vector\n",
@@ -1036,30 +983,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/*\n",
-      " *  Original SymPy expressions:\n",
-      " *  \"[vx = con[iSx]/(rhostar*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))),\n",
-      " *    vy = con[iSy]/(rhostar*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))),\n",
-      " *    vz = con[iSz]/(rhostar*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1)))]\"\n",
-      " */\n",
-      "{\n",
-      "   const double tmp0 = gamma1 - 1;\n",
-      "   const double tmp1 = 1/(rhostar*(pow(c, 2) + cs2_0*pow(rho/rho_0, tmp0)/tmp0));\n",
-      "   vx = con[iSx]*tmp1;\n",
-      "   vy = con[iSy]*tmp1;\n",
-      "   vz = con[iSz]*tmp1;\n",
-      "}\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#rhostar = sp.symbols(\"rhostar\")\n",
     "#StildeU = ixp.declarerank1(\"StildeU\")\n",
